src/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <namedFilters>
        <fullName>nf_01IF0000001p7JZMAY_00NF0000008skuwMAA</fullName>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>The Contact must have a User login</errorMessage>
        <field>Sync_Configuration__c.Contact__c</field>
        <filterItems>
            <field>Contact.User__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Sync Configuration_Contact</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IF0000001vASkMAM_00NF0000008SVYSMA4</fullName>
        <active>true</active>
        <field>Job__c.Primary_Job_Contact__c</field>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.CustomerAccount__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Job_Primary Job Contact</name>
        <sourceObject>Job__c</sourceObject>
    </namedFilters>
</CustomObject>