src/main/default/objects/Contact/listViews/Field_Crew.listView-meta.xml
<ListView>
    <fullName>Field_Crew</fullName>
    <columns>FULL_NAME</columns>
    <columns>Office__c</columns>
    <columns>Catalog_Item__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_for_Field_Work__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Field Crew</label>
    <language>en_US</language>
</ListView>